--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,8 +36,8 @@
 
         <div class="links">
             <a th:href="@{/study-mate/auth/signup}" class="btn btn-secondary">회원가입</a> /
-            <a th:href="@{/find-id}">Find ID</a> /
-            <a th:href="@{/find-password}">Find Password</a>
+            <a th:href="@{/study-mate/auth/find-id}">Find ID</a> /
+            <a th:href="@{/study-mate/auth/find-password}">Find Password</a>
         </div>
     </div>
 </main>
