--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -9,7 +9,7 @@
 <body>
 <header class="header">
   <div class="header-container">
-    <a th:href="@{/}" class="logo">Study-Mate</a>
+    <a th:href="@{/login.html}" class="logo">Study-Mate</a>
   </div>
 </header>
 
